kubernetes/apps/label-studio/label-studio/app/headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
    accessControlAllowOrigin: "*"
    accessControlAllowMethods: [GET,OPTIONS,PUT,POST,DELETE]
    accessControlAllowHeaders: [Origin, X-Requested-With, Content-Type, Accept, Authorization]
    accessControlAllowCredentials: true
