kubernetes/apps/label-studio/label-studio/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: label-studio
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: label-studio
  template:
    metadata:
      labels:
        app: label-studio
    spec:
      containers:
        - name: label-studio
          image: heartexlabs/label-studio:1.13.1@sha256:9cc24ee2a8ad4d3e6169028181a9cb0dc685c9964288f45e0033d07ee19aef2a
          resources: {}
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /label-studio/data
              name: label-studio-data
      volumes:
        - name: label-studio-data
          nfs:
            server: 192.168.1.111
            path: /mnt/STORAGE-01/Group-3-Dataset-Storage
