kubernetes/apps/label-studio/label-studio/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: label-studio
spec:
  selector:
    app: label-studio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
